apps/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: argo
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
  - host: argo.homelab
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - argo.homelab
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.132
